# checkov-url-shortener

./: .gitignore  README.md  main.py  pyproject.toml  run_bot.py
app/: settings.py
app/api/: views.py
app/api/schemas/: url_schema.py
app/bot/: bot.py  services.py  states.py
app/data/db/: models.py
app/data/repository/: repository.py
app/exc/: bot_exceptions.py  db_exceptions.py  url_exceptions.py
app/services/: base_service.py  url_service.py
app/tests/: conftest.py  test_api_endpoints.py  test_api_schemas.py  test_repository.py  test_telegram_bot.py  test_url_service.py  test_urlpair_model.py
