[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "pybase62>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyshorteners>=1.0.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
bot = [
    "aiogram>=3.25.0",
]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-v"]

[tool.covearage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/settings.py",
    "deps/*",
    "exc/*",
]
